syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/slayerbirden/chat/gen;chatpb";

message SignRequest {
  string name = 1;
}

message SignResponse {
  string user_id = 1;
}

message Envelope {
  string id = 1;
  string user = 2;
  string message = 3;
  google.protobuf.Timestamp sent_at = 4;
}

message Message {
  string message = 1;
}

message WhoResponse {
  string name = 1;
}

service Chat {

  // User enters a chat. This is very naive implementation where User just provides its name
  rpc Sign (SignRequest) returns (SignResponse) {}

  // Main line of communication between users
  rpc Communicate (stream Message) returns (stream Envelope) {}

  // Who provides a stream with all users who Entered chat
  rpc Who (google.protobuf.Empty) returns (stream WhoResponse) {}

}